--- a/preprocessing/data_preprocessing.ipynb
+++ b/preprocessing/data_preprocessing.ipynb
@@ -257,8 +257,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['case_id;activity;lifecycle;resource;timestamp;age;crp;diagnose;diagnosticartastrup;diagnosticblood;diagnosticecg;diagnosticic;diagnosticlacticacid;diagnosticliquor;diagnosticother;diagnosticsputum;diagnosticurinaryculture;diagnosticurinarysediment;diagnosticxthorax;disfuncorg;hypotensie;hypoxie;infectionsuspected;infusion;lacticacid;leucocytes;oligurie;sirscritheartrate;sirscritleucos;sirscrittachypnea;sirscrittemperature;sirscriteria2ormore;activity_instance_id;.order'], dtype='object')\n",
-      "Index(['case_id;activity;lifecycle;resource;timestamp;age;crp;diagnose;diagnosticartastrup;diagnosticblood;diagnosticecg;diagnosticic;diagnosticlacticacid;diagnosticliquor;diagnosticother;diagnosticsputum;diagnosticurinaryculture;diagnosticurinarysediment;diagnosticxthorax;disfuncorg;hypotensie;hypoxie;infectionsuspected;infusion;lacticacid;leucocytes;oligurie;sirscritheartrate;sirscritleucos;sirscrittachypnea;sirscrittemperature;sirscriteria2ormore;activity_instance_id;.order'], dtype='object')\n"
+      "Index(['case_id;activity;lifecycle;resource;timestamp;age;crp;diagnose;diagnosticartastrup;diagnosticblood;diagnosticecg;diagnosticic;diagnosticlacticacid;diagnosticliquor;diagnosticother;diagnosticsputum;diagnosticurinaryculture;diagnosticurinarysediment;diagnosticxthorax;disfuncorg;hypotensie;hypoxie;infectionsuspected;infusion;lacticacid;leucocytes;oligurie;sirscritheartrate;sirscritleucos;sirscrittachypnea;sirscrittemperature;sirscriteria2ormore;activity_instance_id;order'], dtype='object')\n",
+      "Index(['case_id;activity;lifecycle;resource;timestamp;age;crp;diagnose;diagnosticartastrup;diagnosticblood;diagnosticecg;diagnosticic;diagnosticlacticacid;diagnosticliquor;diagnosticother;diagnosticsputum;diagnosticurinaryculture;diagnosticurinarysediment;diagnosticxthorax;disfuncorg;hypotensie;hypoxie;infectionsuspected;infusion;lacticacid;leucocytes;oligurie;sirscritheartrate;sirscritleucos;sirscrittachypnea;sirscrittemperature;sirscriteria2ormore;activity_instance_id;order'], dtype='object')\n"
      ]
     },
     {
